base footer restyle

--- a/se/templates/base.html
+++ b/se/templates/base.html
@@ -60,7 +60,7 @@
     {% block content %}
     {% endblock %}
 
-    <footer class="text-white text-center text-lg-start" style="background-color: #343a40;">
+    <footer class="footer">
         <div class="container p-4">
             <div class="row">
                 <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
@@ -109,7 +109,7 @@
                 </div>
             </div>
         </div>
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        <div class="text-center p-3">
             &copy; 2024 S&E Landscaping | Designed by YourCompany
         </div>
     </footer>
