--- a/se/templates/base.html
+++ b/se/templates/base.html
@@ -34,7 +34,14 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <img src="logo.jpeg" alt="S&E Landscaping" class="img-fluid">
+                </div>
+            </div>
+        </div>
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #343a40;">
             <div class="container">
                 <a class="navbar-brand" href="#">S&E Landscaping</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,6 +63,7 @@
             </div>
         </nav>
     </header>
+    
 
     {% block content %}
     {% endblock %}
