--- a/se/templates/base.html
+++ b/se/templates/base.html
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <img src="" alt="S&E Landscaping" class="img-fluid">
+                    <img src="se/templates/logo.jpeg" alt="S&E Landscaping" class="img-fluid">
                 </div>
             </div>
         </div>
