image attempt frm lkn

--- a/se/templates/base.html
+++ b/se/templates/base.html
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <img src="se/templates/logo.jpeg" alt="S&E Landscaping" class="img-fluid">
+                    <img src="https://media.licdn.com/dms/image/D5616AQEMqnbG4PM7_A/profile-displaybackgroundimage-shrink_350_1400/0/1692892559280?e=1720656000&v=beta&t=4UQVLq9OVUUDuAYU9jDbv8TtL9_6OWOuLzEMqfWWOFo" alt="S&E Landscaping" class="img-fluid">
                 </div>
             </div>
         </div>
