--- a/se/templates/base.html
+++ b/se/templates/base.html
@@ -34,12 +34,8 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <img src="https://media.licdn.com/dms/image/D5616AQEMqnbG4PM7_A/profile-displaybackgroundimage-shrink_350_1400/0/1692892559280?e=1720656000&v=beta&t=4UQVLq9OVUUDuAYU9jDbv8TtL9_6OWOuLzEMqfWWOFo" alt="S&E Landscaping" class="img-fluid">
-                </div>
-            </div>
+        <div class="container-fluid" style="padding: 0;">
+            <img src="https://media.licdn.com/dms/image/D5616AQEMqnbG4PM7_A/profile-displaybackgroundimage-shrink_350_1400/0/1692892559280?e=1720656000&v=beta&t=4UQVLq9OVUUDuAYU9jDbv8TtL9_6OWOuLzEMqfWWOFo" alt="S&E Landscaping" class="img-fluid">
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #343a40;">
             <div class="container">
@@ -63,6 +59,7 @@
             </div>
         </nav>
     </header>
+    
     
 
     {% block content %}
