base dynamic adjustments

--- a/se/templates/base.html
+++ b/se/templates/base.html
@@ -1,4 +1,3 @@
-<!-- base.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +8,6 @@
     <style>
         body {
             background-color: #f8f9fa;
-            padding-top: 70px;
         }
         .navbar {
             background-color: #343a40 !important;
@@ -26,16 +24,13 @@
             color: #fff;
             text-align: center;
             padding: 20px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
         }
     </style>
 </head>
 <body>
     <header>
-        <img src="https://media.licdn.com/dms/image/D5616AQEMqnbG4PM7_A/profile-displaybackgroundimage-shrink_350_1400/0/1692892559280?e=1720656000&v=beta&t=4UQVLq9OVUUDuAYU9jDbv8TtL9_6OWOuLzEMqfWWOFo" alt="S&E Landscaping" class="img-fluid">
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #343a40;">
+        <img src="https://media.licdn.com/dms/image/D5616AQEMqnbG4PM7_A/profile-displaybackgroundimage-shrink_350_1400/0/1692892559280?e=1720656000&v=beta&t=4UQVLq9OVUUDuAYU9jDbv8TtL9_6OWOuLzEMqfWWOFo" alt="S&E Landscaping" class="img-fluid" style="width: 100%; height: auto;">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #343a40;">
             <div class="container">
                 <a class="navbar-brand" href="#">S&E Landscaping</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
