--- a/se/templates/base.html
+++ b/se/templates/base.html
@@ -59,7 +59,7 @@
     {% block content %}
     {% endblock %}
 
-    <footer class="footer">
+    <footer class="footer mt-auto">
         <div class="container p-4">
             <div class="row">
                 <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
@@ -108,10 +108,11 @@
                 </div>
             </div>
         </div>
-        <div class="text-center p-3">
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             &copy; 2024 S&E Landscaping | Designed by YourCompany
         </div>
     </footer>
+    
     
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
