--- a/se/templates/base.html
+++ b/se/templates/base.html
@@ -8,6 +8,7 @@
     <style>
         body {
             background-color: #f8f9fa;
+            margin-bottom: 0;
         }
         .navbar {
             background-color: #343a40 !important;
