--- a/se/templates/base.html
+++ b/se/templates/base.html
@@ -25,6 +25,7 @@
             color: #fff;
             text-align: center;
             padding: 0px 0;
+            margin-bottom: 0;
         }
     </style>
 </head>
