--- a/se/templates/base.html
+++ b/se/templates/base.html
@@ -8,7 +8,8 @@
     <style>
         body {
             background-color: #f8f9fa;
-            margin-bottom: 0;
+            margin: 0;
+            padding-bottom: 80px; /* Adjust this value as needed */
         }
         .navbar {
             background-color: #343a40 !important;
@@ -24,44 +25,42 @@
             background-color: #343a40;
             color: #fff;
             text-align: center;
-            padding: 0px 0;
-            margin-bottom: 0;
+            padding: 20px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
 <body>
-    <header>
-        <img src="https://media.licdn.com/dms/image/D5616AQEMqnbG4PM7_A/profile-displaybackgroundimage-shrink_350_1400/0/1692892559280?e=1720656000&v=beta&t=4UQVLq9OVUUDuAYU9jDbv8TtL9_6OWOuLzEMqfWWOFo" alt="S&E Landscaping" class="img-fluid" style="width: 100%; height: auto;">
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #343a40;">
-            <div class="container">
-                <a class="navbar-brand" href="#">S&E Landscaping</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'index' %}">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'services' %}">Our Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
-                        </li>
-                    </ul>
-                </div>
+    <img src="https://media.licdn.com/dms/image/D5616AQEMqnbG4PM7_A/profile-displaybackgroundimage-shrink_350_1400/0/1692892559280?e=1720656000&v=beta&t=4UQVLq9OVUUDuAYU9jDbv8TtL9_6OWOuLzEMqfWWOFo" alt="S&E Landscaping" class="img-fluid" style="width: 100%; height: auto;">
+
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #343a40;">
+        <div class="container">
+            <a class="navbar-brand" href="#">S&E Landscaping</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'index' %}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'services' %}">Our Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
+                    </li>
+                </ul>
             </div>
-        </nav>
-    </header>
-    
-    
-    
+        </div>
+    </nav>
 
     {% block content %}
     {% endblock %}
 
-    <footer class="footer mt-auto">
+    <footer class="footer">
         <div class="container p-4">
             <div class="row">
                 <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
