--- a/se/templates/base.html
+++ b/se/templates/base.html
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body>
-    <img src="https://media.licdn.com/dms/image/D5616AQEMqnbG4PM7_A/profile-displaybackgroundimage-shrink_350_1400/0/1692892559280?e=1720656000&v=beta&t=4UQVLq9OVUUDuAYU9jDbv8TtL9_6OWOuLzEMqfWWOFo" alt="S&E Landscaping" class="img-fluid" style="width: 50%; height: auto;">
+    <img src="https://media.licdn.com/dms/image/D5616AQEMqnbG4PM7_A/profile-displaybackgroundimage-shrink_350_1400/0/1692892559280?e=1720656000&v=beta&t=4UQVLq9OVUUDuAYU9jDbv8TtL9_6OWOuLzEMqfWWOFo" alt="S&E Landscaping" class="img-fluid mx-auto d-block" style="width: 50%; height: auto;">
 
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #343a40;">
         <div class="container">
