--- a/se/templates/base.html
+++ b/se/templates/base.html
@@ -26,6 +26,7 @@
             color: #fff;
             text-align: center;
             padding: 20px 0;
+            bottom: 0;
             width: 100%;
         }
     </style>
