--- a/se/templates/index.html
+++ b/se/templates/index.html
@@ -40,7 +40,7 @@
 </section>
 
 <!-- Call to Action -->
-<section class="cta-section bg-dark text-white py-5">
+<section class="cta-section bg-light py-5">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8 text-center">
