--- a/se/templates/index.html
+++ b/se/templates/index.html
@@ -9,7 +9,7 @@
         <div class="row justify-content-center">
             <div class="col-md-8 text-center">
                 <h1 class="mt-5">Welcome to S&E</h1>
-                <h2 class="mt-5">Landscaping and Snow Removal</h2>
+                <h2 class="lead">Landscaping and Snow Removal</h2>
                 <p class="lead">Transforming your outdoor spaces into works of art</p>
             </div>
         </div>
