--- a/se/templates/index.html
+++ b/se/templates/index.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8 text-center">
-                <h1 class="mt-5">Welcome to S&E Landscaping and Snow Removal</h1>
+                <h1 class="mt-5">Welcome to S&E <br> Landscaping and Snow Removal</h1>
                 <p class="lead">Transforming your outdoor spaces into works of art</p>
             </div>
         </div>
