--- a/se/templates/base.html
+++ b/se/templates/base.html
@@ -110,7 +110,7 @@
             </div>
         </div>
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            &copy; 2024 S&E Landscaping | Designed by A Ryan Ronish Production
+            &copy; 2024 S&E Landscaping | A Ryan Ronish Production
         </div>
     </footer>
 
