--- a/se/templates/base.html
+++ b/se/templates/base.html
@@ -69,10 +69,11 @@
                         We are dedicated to providing top-quality landscaping services to our clients. With our experienced team, we ensure that every project is completed to the highest standards.
                     </p>
                     <div class="mt-4">
-                        <a type="button" class="btn btn-floating btn-warning btn-lg"><i class="fab fa-facebook-f"></i></a>
-                        <a type="button" class="btn btn-floating btn-warning btn-lg"><i class="fab fa-twitter"></i></a>
-                        <a type="button" class="btn btn-floating btn-warning btn-lg"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com" target="_blank" class="btn btn-floating btn-warning btn-lg"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com" target="_blank" class="btn btn-floating btn-warning btn-lg"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.instagram.com" target="_blank" class="btn btn-floating btn-warning btn-lg"><i class="fab fa-instagram"></i></a>
                     </div>
+                    
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
                     <h5 class="text-uppercase mb-4 pb-1">Contact Us</h5>
