--- a/se/templates/base.html
+++ b/se/templates/base.html
@@ -71,7 +71,7 @@
                     <div class="mt-4">
                         <a href="https://m.facebook.com/people/SEscudero/100063893839969/" target="_blank" class="btn btn-floating btn-warning btn-lg"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://twitter.com" target="_blank" class="btn btn-floating btn-warning btn-lg"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.linkedin.com/in/irvin-escudero-904886289/?locale=es_ES" target="_blank" class="btn btn-floating btn-warning btn-lg"><i class="fab fa-linkin"></i></a>
+                        <a href="https://www.linkedin.com" target="_blank" class="btn btn-floating btn-warning btn-lg"><i class="fab fa-linkin"></i></a>
                     </div>
                     
                 </div>
