--- a/se/templates/base.html
+++ b/se/templates/base.html
@@ -69,9 +69,9 @@
                         We are dedicated to providing top-quality landscaping services to our clients. With our experienced team, we ensure that every project is completed to the highest standards.
                     </p>
                     <div class="mt-4">
-                        <a href="https://m.facebook.com/people/SEscudero/100063893839969/" target="_blank" class="btn btn-floating btn-warning btn-lg"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://twitter.com" target="_blank" class="btn btn-floating btn-warning btn-lg"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.linkedin.com" target="_blank" class="btn btn-floating btn-warning btn-lg"><i class="fab fa-linkin"></i></a>
+                        <a href="https://m.facebook.com/people/SEscudero/100063893839969/" target="_blank" class="btn btn-floating btn-warning btn-lg"><i class="fab fa-facebook-f"></i> Facebook</a>
+                        <a href="https://twitter.com" target="_blank" class="btn btn-floating btn-warning btn-lg"><i class="fab fa-twitter"></i> Twitter</a>
+                        <a href="https://www.linkedin.com" target="_blank" class="btn btn-floating btn-warning btn-lg"><i class="fab fa-linkin"></i> Linkedin</a>
                     </div>
                     
                 </div>
