link changes urls, views

--- a/se/templates/services.html
+++ b/se/templates/services.html
@@ -43,21 +43,21 @@
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">Lawn Care</h5>
                             <p class="card-text">We provide comprehensive lawn care services to keep your lawn healthy and green all year round.</p>
-                            <a href="lawn_care.html" class="btn btn-primary mt-auto">More Details</a>
+                            <a href="{% url 'lawn_care' %}" class="btn btn-primary mt-auto">More Details</a>
                         </div>
                     </div>
                     <div class="card mb-3 flex-grow-1">
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">Snow Removal</h5>
                             <p class="card-text">Our efficient snow removal services ensure your property is safe and accessible during the winter months.</p>
-                            <a href="snow_removal.html" class="btn btn-primary mt-auto">More Details</a>
+                            <a href="{% url 'snow_removal' %}" class="btn btn-primary mt-auto">More Details</a>
                         </div>
                     </div>
                     <div class="card mb-3 flex-grow-1">
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">Free Consultations for Larger Projects</h5>
                             <p class="card-text">We offer free consultations to discuss and plan larger landscaping projects tailored to your needs.</p>
-                            <a href="consultations.html" class="btn btn-primary mt-auto">More Details</a>
+                            <a href="{% url 'consultations' %}" class="btn btn-primary mt-auto">More Details</a>
                         </div>
                     </div>
                 </div>
