services link change

--- a/se/templates/snow_removal.html
+++ b/se/templates/snow_removal.html
@@ -19,7 +19,7 @@
                         <li>De-icing</li>
                     </ul>
                     <p>We use state-of-the-art equipment to quickly and efficiently clear snow from your property, ensuring safety and accessibility.</p>
-                    <a href="/" class="btn btn-primary">Back to Services</a>
+                    <a href="services.html" class="btn btn-primary">Back to Services</a>
                 </div>
             </div>
         </div>
