--- a/se/templates/consultations.html
+++ b/se/templates/consultations.html
@@ -18,7 +18,7 @@
                         <li>Expert Advice</li>
                     </ul>
                     <p>We work closely with you to understand your vision and deliver a tailored solution that meets your landscaping needs.</p>
-                    <a href="/" class="btn btn-primary">Back to Services</a>
+                    <a href="services.html" class="btn btn-primary">Back to Services</a>
                 </div>
             </div>
         </div>
