--- a/se/templates/lawn_care.html
+++ b/se/templates/lawn_care.html
@@ -19,7 +19,7 @@
                         <li>Pest Control</li>
                     </ul>
                     <p>Our expert team uses the latest techniques and products to ensure your lawn remains healthy and lush throughout the year.</p>
-                    <a href="services.html" class="btn btn-primary">Back to Services</a>
+                    <a href="{% url 'services' %}" class="btn btn-primary">Back to Services</a>
                 </div>
             </div>
         </div>
