--- a/se/templates/index.html
+++ b/se/templates/index.html
@@ -46,7 +46,7 @@
             <div class="col-md-8 text-center">
                 <h2>Ready to Transform Your Landscape?</h2>
                 <p>Contact us today for a free consultation and let's bring your vision to life!</p>
-                <a href="{% url 'contact' %}" class="btn btn-primary btn-lg">Get Started</a>
+                <a href="{% url 'services' %}" class="btn btn-primary btn-lg">Get Started</a>
             </div>
         </div>
     </div>
