--- a/se/templates/base.html
+++ b/se/templates/base.html
@@ -79,10 +79,10 @@
                     <h5 class="text-uppercase mb-4 pb-1">Contact Us</h5>
                     <ul class="fa-ul" style="margin-left: 0;">
                         <li class="mb-3">
-                            <span class="fa-li"><i class="fas fa-home"></i></span><span class="ms-2">123 Main Street, Cityville, USA</span>
+                            <span class="fa-li"><i class="fas fa-home"></i></span><span class="ms-2">Greeley|</span>
                         </li>
                         <li class="mb-3">
-                            <span class="fa-li"><i class="fas fa-envelope"></i></span><span class="ms-2">info@sandelandscaping.com</span>
+                            <span class="fa-li"><i class="fas fa-envelope"></i></span><span class="ms-2">s.escuderollc@gmail.com</span>
                         </li>
                         <li class="mb-3">
                             <span class="fa-li"><i class="fas fa-phone"></i></span><span class="ms-2">+1 (555) 123-4567</span>
@@ -95,11 +95,11 @@
                         <tbody class="font-weight-normal">
                             <tr>
                                 <td>Monday - Friday:</td>
-                                <td>8:00 AM - 6:00 PM</td>
+                                <td>9:00 AM - 5:00 PM</td>
                             </tr>
                             <tr>
                                 <td>Saturday:</td>
-                                <td>9:00 AM - 5:00 PM</td>
+                                <td>Closed</td>
                             </tr>
                             <tr>
                                 <td>Sunday:</td>
