--- a/se/templates/base.html
+++ b/se/templates/base.html
@@ -79,13 +79,13 @@
                     <h5 class="text-uppercase mb-4 pb-1">Contact Us</h5>
                     <ul class="fa-ul" style="margin-left: 0;">
                         <li class="mb-3">
-                            <span class="fa-li"><i class="fas fa-home"></i></span><span class="ms-2">Greeley|</span>
+                            <span class="fa-li"><i class="fas fa-home"></i></span><span class="ms-2">Greeley|Loveland|Colorado</span>
                         </li>
                         <li class="mb-3">
                             <span class="fa-li"><i class="fas fa-envelope"></i></span><span class="ms-2">s.escuderollc@gmail.com</span>
                         </li>
                         <li class="mb-3">
-                            <span class="fa-li"><i class="fas fa-phone"></i></span><span class="ms-2">+1 (555) 123-4567</span>
+                            <span class="fa-li"><i class="fas fa-phone"></i></span><span class="ms-2">+1 (970) 342-7643</span>
                         </li>
                     </ul>
                 </div>
